changed home page fonts

--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body{
 }
 h3{
 	color: green;
-	font-family: "Consolas";
+	font-family: "Helvetica";
 }
 p{
 	color: white;
-	font-family: "Consolas";
+	font-family: "Helvetica";
 }
