--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@ body{
 h3{
 	color: green;
 	font-family: "Helvetica";
+	font-size: 3em;
+	text-align: center;
 }
 p{
 	color: white;
 	font-family: "Helvetica";
+	font-size; 1em;
+	text-align: center;
 }
