--- a/style.css
+++ b/style.css
@@ -11,5 +11,6 @@ p{
 	color: rgba(80, 80, 80, 1);
 	font-family: "Helvetica";
 	font-size: 1em;
-	text-align: center;
+	text-align: left;
+	margin: 20px
 }
