--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
-body{
+body {
 	background-color: rgba(240, 240, 240, 1);
 }
-h3{
+.header img {
+	background-size: cover;
+	height: 300px;
+	position: relative;
+	text-align: center;
+	width: 100%;
+}
+.header h3 {
 	color: rgba(30, 30, 30, 1);
 	font-family: "Helvetica";
 	font-size: 2em;
 	text-align: center;
 }
-p{
+p {
 	color: rgba(80, 80, 80, 1);
 	font-family: "Helvetica";
 	font-size: 1em;
