--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ body {
 	color: rgba(30, 30, 30, 1);
 	font-family: "Helvetica";
 	font-size: 2em;
-	text-align: center;
+	position: absolute;
+	text-align: left;
+	margin: 60px
 }
 p {
 	color: rgba(80, 80, 80, 1);
