--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 	text-align: center;
 	width: 100%;
 }
-.header h3 {
+.main_title {
 	color: rgba(30, 30, 30, 1);
 	font-family: "Helvetica";
 	font-size: 2em;
