--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ body {
 	font-family: "Helvetica";
 	font-size: 2em;
 	position: absolute;
-	text-align: left;
-	margin: 60px
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%)
 }
 p {
 	color: rgba(80, 80, 80, 1);
