--- a/style.css
+++ b/style.css
@@ -10,12 +10,11 @@ body {
 }
 .main_title {
 	color: rgba(30, 30, 30, 1);
-	font-family: "Helvetica";
+	font-family: "Helvetica Medium";
 	font-size: 2em;
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%)
+	top: 100px;
+	left: 20px;
 }
 p {
 	color: rgba(80, 80, 80, 1);
