--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 .main_title {
 	color: rgba(30, 30, 30, 1);
-	font-family: "Helvetica Medium";
+	font-family: "Helvetica";
 	font-size: 2em;
 	position: absolute;
 	top: 100px;
