--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ body {
 	object-position: 80%;
 	height: 300px;
 	margin: 0;
+	max-width: 100%;
 	position: center;
-	text-align: center;
+	vertical-align: middle;
 	width: 100%;
 }
 .main_title {
