--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@ body {
 	background-color: rgba(240, 240, 240, 1);
 }
 .header img {
-	object-fit: none;
+	object-fit: contain;
 	object-position: 80%;
 	height: 300px;
 	margin: 0;
-	max-width: 100%;
 	position: center;
 	vertical-align: middle;
 	width: 100%;
