--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	background-color: rgba(240, 240, 240, 1);
 }
 .header img {
-	object-fit: contain;
+	object-fit: cover;
 	object-position: 80%;
 	height: 300px;
 	margin: 0;
