--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 	color: rgba(30, 30, 30, 1);
 	font-family: "Helvetica";
 	font-size: 2em;
-	position: absolute;
-	top: 150px;
+	position: relative;
+	top: 50%;
 	left: 40px;
 }
 p {
