--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 	color: rgba(30, 30, 30, 1);
 	font-family: "Helvetica";
 	font-size: 2em;
-	position: relative;
+	position: absolute;
 	top: 50%;
 	left: 40px;
 }
