--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
 	background-color: rgba(240, 240, 240, 1);
 }
-.header img {
-	object-fit: cover;
-	object-position: 80%;
+.header {
 	height: 300px;
 	margin: 0;
-	position: center;
-	vertical-align: middle;
+	position: relative;
 	width: 100%;
+}
+.header img {
+	object-fit: cover;
+	position: center;
 }
 .main_title {
 	color: rgba(30, 30, 30, 1);
@@ -16,7 +17,7 @@ body {
 	font-size: 2em;
 	position: absolute;
 	top: 50%;
-	left: 40px;
+	left: 50%;
 }
 p {
 	color: rgba(80, 80, 80, 1);
