--- a/style.css
+++ b/style.css
@@ -3,13 +3,8 @@ body {
 }
 .header {
 	height: 300px;
-	margin: 0;
 	position: relative;
-	width: 100%;
-}
-.header img {
-	object-fit: cover;
-	position: center;
+	width: 1000px;
 }
 .main_title {
 	color: rgba(30, 30, 30, 1);
