--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 .header {
 	height: 300px;
 	position: relative;
-	width: 1000px;
+	width: 100%;
 }
 .main_title {
 	color: rgba(30, 30, 30, 1);
@@ -12,7 +12,7 @@ body {
 	font-size: 2em;
 	position: absolute;
 	top: 50%;
-	left: 50%;
+	left: 5%;
 }
 p {
 	color: rgba(80, 80, 80, 1);
