--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
 	background-color: rgba(240, 240, 240, 1);
 }
+img {
+	max-height: auto;
+	max-width: 100%;
+}
 .header {
 	height: 250px;
 	position: relative;
