--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body, html {
 }
 
 .hero_image {
-	background-image: url("img\Header_Brain_Cropped.jpg");
+	background-image: url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
 	height: 20%;
 	background-position: center;
 	background-repeat: no-repeat;
