--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body, html {
 }
 
 .hero_image {
-	background-image: url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
 	height: 20%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -16,6 +16,7 @@ body, html {
 	font-family: "Helvetica";
 	font-size: 2em;
 	position: absolute;
+	text-align: center;
 	top: 50%;
 	left: 2%;
 }
