--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body, html {
 .hero_text {
 	color: rgba(30, 30, 30, 1);
 	font-family: "Helvetica";
-	font-size: 1.5em;
-	left: 2%;
+	font-size: 150%;
+	left: 1%;
 	position: absolute;
 	top: 50%;
 	transform: translate(0%, -50%);
@@ -23,7 +23,7 @@ body, html {
 p {
 	color: rgba(80, 80, 80, 1);
 	font-family: "Helvetica";
-	font-size: 1em;
+	font-size: 100%;
 	text-align: left;
-	margin: 20px
+	margin: 2%
 }
