--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, html {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 15%;
+	min-width: 100%;
 	margin = 0;
 	position: relative;
 }
