--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ body, html {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	box-sizing: border-box;
 	height: 15%;
-	margin: 0;
+	padding: 0;
 	position: relative;
 }
 .hero_text {
