--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body, html {
 	height: 15%;
 	padding: 0px;
 	position: relative;
+	border: 2px solid black;
 }
 .hero_text {
 	color: rgba(30, 30, 30, 1);
