--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body, html {
-	height: 100%;
 	background-color: rgba(220, 220, 220, 1);
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 .hero_image {
@@ -9,7 +11,6 @@ body, html {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 15%;
-	margin: 0px;
 	position: relative;
 }
 .hero_text {
