--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body, html {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 15%;
+	height: 250px;
 	position: relative;
 }
 .hero_text {
 	color: rgba(30, 30, 30, 1);
 	font-family: "Helvetica";
 	font-size: 150%;
-	left: 1%;
+	left: 10px;
 	position: absolute;
 	top: 50%;
 	transform: translate(0%, -50%);
@@ -26,6 +26,8 @@ p {
 	color: rgba(80, 80, 80, 1);
 	font-family: "Helvetica";
 	font-size: 100%;
+	line-height: 100%;
+	margin: 20px;
+	position: absolute;
 	text-align: left;
-	margin: 2%
 }
