--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body, html {
 	color: rgba(30, 30, 30, 1);
 	font-family: "Helvetica";
 	font-size: 200%;
+	font-variant: small-caps;
 	left: 10px;
 	position: absolute;
 	top: 50%;
