--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 .hero_image {
-	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -16,13 +16,22 @@ body, html {
 	position: relative;
 }
 .hero_text {
-	color: rgba(30, 30, 30, 1);
+	color: rgba(230, 230, 230, 1);
 	font-family: Helvetica, sans-serif;
-	font-size: 200%;
+	font-size: 150%;
 	font-variant: small-caps;
 	left: 10px;
 	position: absolute;
 	top: 50%;
+	transform: translate(0%, -50%);
+}
+.hero_subtext {
+	color: rgba(230, 230, 230, 1);
+	font-family: Helvetica, sans-serif;
+	font-size: 75%;
+	left: 10px;
+	position: absolute;
+	top: 75%;
 	transform: translate(0%, -50%);
 }
 p {
