--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body, html {
 }
 .hero_text {
 	color: rgba(230, 230, 230, 1);
-	font-family: Helvetica, sans-serif;
+	font-family: Tahoma, sans-serif;
 	font-size: 150%;
 	font-variant: small-caps;
 	left: 10px;
@@ -27,7 +27,7 @@ body, html {
 }
 .hero_subtext {
 	color: rgba(230, 230, 230, 1);
-	font-family: Helvetica, sans-serif;
+	font-family: Tahoma, sans-serif;
 	font-size: 75%;
 	left: 10px;
 	position: absolute;
