--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body, html {
 }
 .hero_text {
 	color: rgba(230, 230, 230, 1);
-	font-family: Verdana, sans-serif;
+	font-family: Helvetica, sans-serif;
 	font-size: 150%;
 	font-variant: small-caps;
 	left: 10px;
@@ -27,7 +27,7 @@ body, html {
 }
 .hero_subtext {
 	color: rgba(230, 230, 230, 1);
-	font-family: Verdana, sans-serif;
+	font-family: Helvetica, sans-serif;
 	font-size: 75%;
 	left: 10px;
 	position: absolute;
@@ -36,7 +36,7 @@ body, html {
 }
 p {
 	color: rgba(80, 80, 80, 1);
-	font-family: Georgia, sans-serif;
+	font-family: Garamond, sans-serif;
 	font-size: 100%;
 	line-height: 200%;
 	margin: 20px;
