--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ body, html {
 .hero_text {
 	color: rgba(230, 230, 230, 1);
 	font-family: Helvetica, sans-serif;
-	font-size: 150%;
+	font-size: 24px;
 	font-variant: small-caps;
+	font-weight: 300;
 	left: 10px;
 	position: absolute;
 	top: 50%;
@@ -28,7 +29,7 @@ body, html {
 .hero_subtext {
 	color: rgba(230, 230, 230, 1);
 	font-family: Helvetica, sans-serif;
-	font-size: 75%;
+	font-size: 12px;
 	left: 10px;
 	position: absolute;
 	top: 75%;
@@ -36,9 +37,9 @@ body, html {
 }
 p {
 	color: rgba(80, 80, 80, 1);
-	font-family: Garamond, sans-serif;
-	font-size: 100%;
-	line-height: 200%;
+	font-family: Georgia, sans-serif;
+	font-size: 16px;
+	line-height: 24px;
 	margin: 20px;
 	position: absolute;
 	text-align: left;
