--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body, html {
 	color: rgba(230, 230, 230, 1);
 	font-family: Helvetica, sans-serif;
 	font-size: 12px;
+	font-weight: 100;
 	left: 10px;
 	position: absolute;
 	top: 75%;
