--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body, html {
 }
 .hero_text {
 	color: rgba(230, 230, 230, 1);
-	font-family: Helvetica, sans-serif;
+	font-family: Verdana, sans-serif;
 	font-size: 24px;
 	font-variant: small-caps;
 	font-weight: 100;
@@ -28,7 +28,7 @@ body, html {
 }
 .hero_subtext {
 	color: rgba(230, 230, 230, 1);
-	font-family: Helvetica, sans-serif;
+	font-family: Verdana, sans-serif;
 	font-size: 12px;
 	font-weight: 100;
 	left: 10px;
