--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body, html {
 	font-family: Verdana, sans-serif;
 	font-size: 24px;
 	font-variant: small-caps;
-	font-weight: Thin;
+	font-weight: 100;
 	left: 10px;
 	position: absolute;
 	top: 50%;
@@ -30,7 +30,7 @@ body, html {
 	color: rgba(230, 230, 230, 1);
 	font-family: Verdana, sans-serif;
 	font-size: 12px;
-	font-weight: Thin;
+	font-weight: 100;
 	left: 10px;
 	position: absolute;
 	top: 75%;
