--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body, html {
 	color: rgba(230, 230, 230, 1);
 	font-family: Verdana, sans-serif;
 	font-size: 24px;
-<!--	font-variant: small-caps;-->
+/*	font-variant: small-caps; */
 	font-weight: 100;
 	left: 10px;
 	position: absolute;
