--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p {
 	color: rgba(80, 80, 80, 1);
 	font-family: Georgia, sans-serif;
 	font-size: 16px;
-	font-weight: bold;
+	font-weight: thinSA;
 	line-height: 32px;
 	margin: 20px;
 	position: absolute;
