--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body, html {
 }
 .hero_text {
 	color: rgba(230, 230, 230, 1);
-	font-family: Arial, sans-serif;
+	font-family: "Arial Narrow", sans-serif;
 	font-size: 46px;
 	font-variant: small-caps;
 	font-weight: 100;
@@ -29,7 +29,7 @@ body, html {
 }
 .hero_subtext {
 	color: rgba(230, 230, 230, 1);
-	font-family: Arial sans-serif;
+	font-family: "Arial Narrow", sans-serif;
 	font-size: 12px;
 	font-weight: 900;
 	left: 10px;
