--- a/style.css
+++ b/style.css
@@ -32,12 +32,22 @@ body, html {
 	font-family: "Inter", sans-serif;
 	font-size: 12px;
 	font-weight: 900;
-	left: 20px;
+	left: 10px;
 	position: absolute;
 	top: 75%;
 	transform: translate(0%, -50%);
 }
 p {
+	color: rgba(40, 40, 40, 1);
+	font-family: Georgia, serif;
+	font-size: 16px;
+	font-weight: 600;
+	line-height: 48px;
+	margin: 20px;
+	position: absolute;
+	text-align: left;
+}
+p1 {
 	color: rgba(80, 80, 80, 1);
 	font-family: Georgia, serif;
 	font-size: 16px;
