--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ p {
 	font-size: 16px;
 	font-weight: 600;
 	line-height: 48px;
-	margin: 20px;
-	position: relative;
+/*	margin: 20px;
+*/	position: relative;
 	text-align: left;
 }
 p1 {
@@ -53,7 +53,7 @@ p1 {
 	font-size: 16px;
 	font-weight: 100;
 	line-height: 32px;
-	margin: 20px;
+	margin: 30px;
 	position: relative;
 	text-align: left;
 }
