--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, html {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 20%;
-	margin: 0;
+	margin: 0px;
 	max-height: 250px;
 	min-height: 100px;
 	position: relative;
