--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ p {
 	font-family: Georgia, serif;
 	font-size: 16px;
 	font-weight: 600;
-	line-height: 48px;
-/*	margin: 20px;
-*/	position: relative;
+	line-height: 16px;
+	left: 20px;
+	position: relative;
 	text-align: left;
 }
 p1 {
@@ -53,7 +53,7 @@ p1 {
 	font-size: 16px;
 	font-weight: 100;
 	line-height: 32px;
-	margin: 30px;
+	left: 30px;
 	position: relative;
 	text-align: left;
 }
