--- a/style.css
+++ b/style.css
@@ -39,20 +39,20 @@ body, html {
 }
 p {
 	color: rgba(40, 40, 40, 1);
-	font-family: Georgia, serif;
+	font-family: "Inter", sans-serif;
 	font-size: 16px;
-	font-weight: 600;
-	line-height: 16px;
+	font-weight: 300;
+	line-height: 32px;
 	left: 20px;
 	position: relative;
 	text-align: left;
 }
 p1 {
 	color: rgba(80, 80, 80, 1);
-	font-family: Georgia, serif;
+	font-family: "Inter", sans-serif;
 	font-size: 16px;
 	font-weight: 100;
-	line-height: 32px;
+	line-height: 28px;
 	left: 30px;
 	position: relative;
 	text-align: left;
