--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p {
 	font-size: 16px;
 	font-weight: 300;
 	line-height: 32px;
-	left: 20px;
+	margin: 20px;
 	position: relative;
 	text-align: left;
 }
