--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body, html {
 }
 .hero_text {
 	color: rgba(245, 245, 245, 1);
-	font-family: "Inter", sans-serif;
+	font-family: 'Inter', sans-serif;
 	font-size: 24px;
 	font-variant: small-caps;
 	font-weight: 300;
@@ -28,8 +28,8 @@ body, html {
 	transform: translate(0%, -50%);
 }
 .hero_subtext {
-	color: rgba(0, 0, 0, 1);
-	font-family: "Inter", sans-serif;
+	color: rgba(245, 245, 245, 1);
+	font-family: 'Inter', sans-serif;
 	font-size: 12px;
 	font-weight: 400;
 	left: 10px;
@@ -39,7 +39,7 @@ body, html {
 }
 p {
 	color: rgba(0, 0, 0, 1);
-	font-family: "Inter", sans-serif;
+	font-family: 'Inter', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 32px;
@@ -49,7 +49,7 @@ p {
 }
 p1 {
 	color: rgba(0, 0, 0, 1);
-	font-family: "Inter", sans-serif;
+	font-family: 'Inter', sans-serif;
 	font-size: 16px;
 	font-weight: 300;
 	line-height: 28px;
