--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ body, html {
 	color: rgba(245, 245, 245, 1);
 	font-family: 'Inter', sans-serif;
 	font-size: 24px;
-/*font-variant: small-caps;
-*/	font-weight: 100;
+	font-weight: 100;
 	left: 10px;
 	position: absolute;
 	top: 50%;
