--- a/style.css
+++ b/style.css
@@ -17,26 +17,30 @@ body, html {
 	position: relative;
 }
 .hero_text {
-	color: rgba(245, 245, 245, 1);
-	font-family: 'Inter', sans-serif;
-	font-size: 24px;
-	font-weight: 100;
 	left: 10px;
 	position: absolute;
 	top: 50%;
 	transform: translate(0%, -50%);
 }
 .hero_subtext {
-	color: rgba(245, 245, 245, 1);
-	font-family: 'Inter', sans-serif;
-	font-size: 12px;
-	font-weight: 200;
 	left: 10px;
 	position: absolute;
 	top: 75%;
 	transform: translate(0%, -50%);
 }
-p {
+h1 {
+	color: rgba(245, 245, 245, 1);
+	font-family: 'Inter', sans-serif;
+	font-size: 24px;
+	font-weight: 100;
+}
+h2 {
+	color: rgba(245, 245, 245, 1);
+	font-family: 'Inter', sans-serif;
+	font-size: 12px;
+	font-weight: 200;
+}
+h3 {
 	color: rgba(0, 0, 0, 1);
 	font-family: 'Inter', sans-serif;
 	font-size: 16px;
@@ -46,7 +50,7 @@ p {
 	position: relative;
 	text-align: left;
 }
-p1 {
+p {
 	color: rgba(0, 0, 0, 1);
 	font-family: 'Inter', sans-serif;
 	font-size: 16px;
