--- a/style.css
+++ b/style.css
@@ -19,25 +19,27 @@ body, html {
 .hero_text {
 	left: 20px;
 	position: absolute;
+	right: 20px;
 	top: 50%;
 	transform: translate(0%, -50%);
 }
 .hero_subtext {
 	left: 20px;
 	position: absolute;
+	right: 20px;
 	top: 75%;
 	transform: translate(0%, -50%);
 }
 h1 {
 	color: rgba(245, 245, 245, 1);
 	font-family: 'Inter', sans-serif;
-	font-size: 36px;
+	font-size: 32px;
 	font-weight: 400;
 }
 h2 {
 	color: rgba(245, 245, 245, 1);
 	font-family: 'Inter', sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 300;
 }
 h3 {
@@ -45,9 +47,10 @@ h3 {
 	font-family: 'Inter', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
+	left: 30px;
 	line-height: 32px;
-	margin: 30px;
 	position: relative;
+	right: 30px;
 	text-align: left;
 }
 p {
@@ -58,5 +61,6 @@ p {
 	line-height: 32px;
 	left: 40px;
 	position: relative;
+	right: 40px;
 	text-align: left;
 }
