--- a/style.css
+++ b/style.css
@@ -18,15 +18,15 @@ body, html {
 }
 .hero_text {
 	left: 20px;
+	padding-right: 20px;
 	position: absolute;
-	right: 20px;
 	top: 50%;
 	transform: translate(0%, -50%);
 }
 .hero_subtext {
 	left: 20px;
+	padding-right: 20px;
 	position: absolute;
-	right: 20px;
 	top: 75%;
 	transform: translate(0%, -50%);
 }
@@ -49,8 +49,8 @@ h3 {
 	font-weight: 400;
 	left: 30px;
 	line-height: 32px;
+	padding-right: 30px;
 	position: relative;
-	right: 30px;
 	text-align: left;
 }
 p {
@@ -60,7 +60,7 @@ p {
 	font-weight: 300;
 	line-height: 32px;
 	left: 40px;
+	padding-right: 40px;
 	position: relative;
-	right: 40px;
 	text-align: left;
 }
