--- a/style.css
+++ b/style.css
@@ -13,17 +13,20 @@ body, html {
 	height: 20%;
 	margin: 0px;
 	max-height: 250px;
+	max-width: 100%;
 	min-height: 100px;
 	position: relative;
 }
 .hero_text {
 	left: 20px;
+	max-width: 100%;
 	position: absolute;
 	top: 50%;
 	transform: translate(0%, -50%);
 }
 .hero_subtext {
 	left: 20px;
+	max-width: 100%;
 	position: absolute;
 	top: 75%;
 	transform: translate(0%, -50%);
@@ -47,6 +50,7 @@ h3 {
 	font-weight: 400;
 	left: 30px;
 	line-height: 32px;
+	max-width: 100%;
 	padding-right: 30px;
 	position: relative;
 	text-align: left;
@@ -58,6 +62,7 @@ p {
 	font-weight: 300;
 	line-height: 32px;
 	left: 40px;
+	max-width: 100%;
 	padding-right: 40px;
 	position: relative;
 	text-align: left;
