--- a/style.css
+++ b/style.css
@@ -13,20 +13,17 @@ body, html {
 	height: 20%;
 	margin: 0px;
 	max-height: 250px;
-	max-width: 100%;
 	min-height: 100px;
 	position: relative;
 }
 .hero_text {
 	left: 20px;
-	max-width: 100%;
 	position: absolute;
 	top: 50%;
 	transform: translate(0%, -50%);
 }
 .hero_subtext {
 	left: 20px;
-	max-width: 100%;
 	position: absolute;
 	top: 75%;
 	transform: translate(0%, -50%);
@@ -42,6 +39,10 @@ h2 {
 	font-family: 'Inter', sans-serif;
 	font-size: 16px;
 	font-weight: 300;
+}
+.welcome_p {
+	margin: 0px;
+	position: relative;
 }
 h3 {
 	color: rgba(0, 0, 0, 1);
