--- a/style.css
+++ b/style.css
@@ -66,3 +66,18 @@ p {
 	position: relative;
 	text-align: left;
 }
+.footer_p {
+	margin: 0px;
+	position: relative;
+}
+p2 {
+	color: rgba(0, 0, 0, 1);
+	font-family: 'Inter', sans-serif;
+	font-size: 12px;
+	font-weight: 300;
+	line-height: 24px;
+	padding-left: 50px;
+	padding-right: 50px;
+	position: relative;
+	text-align: middle;
+}
