--- a/style.css
+++ b/style.css
@@ -68,16 +68,18 @@ p {
 }
 .footer_p {
 	margin: 0px;
-	position: relative;
+	position: absolute;
+    width: 100%;
+    height: 2.5rem;
 }
 p2 {
 	color: rgba(0, 0, 0, 1);
 	font-family: 'Inter', sans-serif;
 	font-size: 12px;
-	font-weight: 300;
+	font-weight: 200;
 	line-height: 24px;
 	padding-left: 50px;
 	padding-right: 50px;
 	position: relative;
-	text-align: middle;
+	text-align: center;
 }
