--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@ body, html {
 	margin: 0;
 	padding: 0;
 }
-
+page-container {
+  position: relative;
+  min-height: 100vh;
+}
+content-wrap {
+  padding-bottom: 2.5rem;
+}
 .hero_image {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
 	background-position: center;
@@ -67,9 +73,10 @@ p {
 	text-align: left;
 }
 .footer_p {
-	margin: 0px;
 	position: absolute;
-    height: 2.5rem;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;  
 }
 p2 {
 	color: rgba(0, 0, 0, 1);
