--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body, html {
 	background-color: rgba(245, 245, 245, 1);
+	height: 100%;
 	margin: 0;
 	padding: 0;
 }
@@ -8,7 +9,7 @@ body, html {
   min-height: 100%;
 }
 .content-wrap {
-  padding-bottom: 2.5rem;
+  padding-bottom: 4rem;
 }
 .hero_image {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
@@ -41,7 +42,7 @@ body, html {
 	position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
+    height: 4rem;
 	text-align: center;
 }
 h1 {
