--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h3 {
 	position: relative;
 	text-align: left;
 }
-href2 {
+a {
 	font-family: 'Inter', sans-serif;
 	font-size: 12px;
 	font-weight: 200;
