--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body, html {
 }
 .content-wrap {
   padding-bottom: 6rem;
+  min-height: 100vh
 }
 .hero_image {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
