--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body, html {
 	margin: 0px;
 	position: absolute;
 }
-#bodytext {
+.bodytext {
     color: rgba(0, 0, 0, 1);
     font-family: 'Inter', sans-serif;
     font-size: 16px;
@@ -49,7 +49,7 @@ body, html {
     position: relative;
     text-align: left;
 }
-#footertext {
+.footertext {
     color: rgba(0, 0, 0, 1);
     font-family: 'Inter', sans-serif;
     font-size: 12px;
