--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body, html {
   min-height: 100vh;
 }
 #content-wrap {
-  padding-bottom: 5.5rem;
+    height: auto;
+    min-height: 100%
+    padding-bottom: 5.5rem;
 }
 #hero_image {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
