--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html {
 }
 #content-wrap {
     height: auto;
-    min-height: 100%
+    min-height: 100%;
     padding-bottom: 5.5rem;
 }
 #hero_image {
