--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
 }
 #page-container {
   position: relative;
-  min-height: 100vh;
+  min-height: 100%;
 }
 #content-wrap {
     height: auto;
