--- a/style.css
+++ b/style.css
@@ -39,11 +39,12 @@ body, html {
 	transform: translate(0%, -50%);
 }
 #footer {
-    position: absolute;
     bottom: 0;
-    width: 100%;
     height: 5.5rem;
+    margin: 10px;
+    position: absolute;
     text-align: center;
+    width: 100%;
 }
 h1 {
 	color: rgba(245, 245, 245, 1);
@@ -84,9 +85,7 @@ h3 {
     font-family: 'Inter', sans-serif;
     font-size: 12px;
     font-weight: 200;
-    left: 10px;
     line-height: 24px;
-    right: 10px;
 }
 a:link, a:visited {
 	color: rgba(0, 0, 0, 1);
