--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body, html {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 20%;
+	height: 20vh;
 	margin: 0px;
 	max-height: 350px;
 	min-height: 200px;
