--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body, html {
     margin: 0px;
     position: absolute;
     text-align: center;
+    width: 100%;
 }
 h1 {
 	color: rgba(245, 245, 245, 1);
