--- a/style.css
+++ b/style.css
@@ -86,6 +86,9 @@ h3 {
     padding-left: 10px;
     padding-right: 10px;
 }
+.tab {
+    text-indent:40px
+}
 a:link, a:visited {
 	color: rgba(0, 0, 0, 1);
 	font-family: 'Inter', sans-serif;
