--- a/style.css
+++ b/style.css
@@ -105,4 +105,11 @@ a:hover, a:active {
 }
 ul {
     list-style-type: none;
+    color: rgba(0, 0, 0, 1);
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 28px;
+    position: relative;
+    text-align: left;
 }
