--- a/style.css
+++ b/style.css
@@ -72,8 +72,6 @@ h3 {
     font-size: 16px;
     font-weight: 300;
     line-height: 28px;
-    padding-left: 10px;
-    padding-right: 10px;
     position: relative;
     text-align: left;
 }
@@ -92,12 +90,26 @@ h3 {
 a:link, a:visited {
 	color: rgba(0, 0, 0, 1);
 	font-family: 'Inter', sans-serif;
+	font-size: 16px;
+	font-weight: 300;
+	line-height: 28px;
+    text-decoration: none;
+}
+a:hover, a:active {
+	font-family: 'Inter', sans-serif;
+	font-size: 16px;
+	font-weight: 300;
+	line-height: 28px;
+}
+a.footer:link, a.footer:visited {
+	color: rgba(0, 0, 0, 1);
+	font-family: 'Inter', sans-serif;
 	font-size: 12px;
 	font-weight: 200;
 	line-height: 24px;
     text-decoration: none;
 }
-a:hover, a:active {
+a.footer:hover, a.footer:active {
 	font-family: 'Inter', sans-serif;
 	font-size: 12px;
 	font-weight: 200;
