--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@ body, html {
     position: relative;
     min-height: 100vh;
 }
+#navigation {
+	background-image: rgba(0, 0, 0, 1);
+	height: 3rem;
+	margin: 0px;
+    padding: 0px;
+	position: relative;
+}
 #content-wrap {
     margin: 0px;
     padding-bottom: 5.5rem;
@@ -128,4 +135,13 @@ ul {
     line-height: 32px;
     position: relative;
     text-align: left;
+}
+ul.list {
+    list-style-type: none;
+    color: rgba(255, 255, 255, 1);
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    position: relative;
+    text-align: center;
 }
