--- a/style.css
+++ b/style.css
@@ -91,9 +91,6 @@ h3 {
     padding-left: 10px;
     padding-right: 10px;
 }
-.tab {
-    text-indent:40px
-}
 a:link, a:visited {
 	colour: rgba(0, 0, 0, 1);
 	font-family: 'Inter', sans-serif;
@@ -126,6 +123,22 @@ a.footer:hover, a.footer:active {
 	line-height: 24px;
     text-decoration: underline;
 }
+a.nav:link, a.nav:visited {
+	colour: rgba(255, 255, 255, 1);
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+	line-height: 24px;
+    text-decoration: none;
+}
+a.nav:hover, a.nav:active {
+    colour: blue;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+	line-height: 24px;
+    text-decoration: underline;
+}
 ul {
     list-style-type: none;
     colour: rgba(0, 0, 0, 1);
@@ -136,7 +149,7 @@ ul {
     position: relative;
     text-align: left;
 }
-ul.list {
+ul.nav {
     list-style-type: none;
     colour: rgba(255, 255, 255, 1);
     font-family: 'Inter', sans-serif;
