--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ ul.nav {
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-weight: 500;
+    margin: 0px;
+    padding: 0px;
     position: relative;
     text-align: center;
 }
