--- a/style.css
+++ b/style.css
@@ -8,13 +8,7 @@ body, html {
     position: relative;
     min-height: 100vh;
 }
-#navigation {
-	background-color: rgba(0, 0, 0, 1);
-	height: 3rem;
-	margin: 0px;
-    padding: 0px;
-	position: relative;
-}
+
 #hero_image {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
 	background-position: center;
@@ -151,12 +145,17 @@ ul {
 }
 ul.nav {
     list-style-type: none;
+    background-color: rgba(20, 20, 20, 1);
+    position: fixed;
+    text-align: center;
+    top: 0;
+    width: 100%;
+}
+li.nav {
     color: rgba(255, 255, 255, 1);
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-weight: 500;
     margin: 0px;
     padding: 0px;
-    position: relative;
-    text-align: center;
 }
