--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body, html {
     position: relative;
     min-height: 100vh;
 }
-
+#nav {
+    position: relative;
+}
 #hero_image {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
 	background-position: center;
@@ -145,7 +147,7 @@ ul {
 }
 ul.nav {
     list-style-type: none;
-    background-color: rgba(20, 20, 20, 1);
+    background-color: rgba(50, 50, 50, 1);
     position: fixed;
     text-align: center;
     top: 0;
@@ -153,6 +155,7 @@ ul.nav {
 }
 li.nav {
     color: rgba(255, 255, 255, 1);
+    display: inline;
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-weight: 500;
