--- a/style.css
+++ b/style.css
@@ -148,8 +148,10 @@ ul {
 ul.nav {
     list-style-type: none;
     background-color: rgba(50, 50, 50, 1);
+    margin: 0px;
+    padding: 0px;
     position: fixed;
-    text-align: center;
+    text-align: left;
     top: 0;
     width: 100%;
 }
@@ -159,6 +161,10 @@ li.nav {
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-weight: 500;
-    margin: 0px;
-    padding: 0px;
+}
+li.nav:hover {
+    background-color: rgba(0, 0, 0, 1);
+}
+li.nav:active {
+    background-color: rgba(100, 100, 100, 1);
 }
