--- a/style.css
+++ b/style.css
@@ -116,21 +116,13 @@ a.footer:hover, a.footer:active {
 	line-height: 24px;
     text-decoration: underline;
 }
-a.nav:link, a.nav:visited {
+a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
 	color: rgba(255, 255, 255, 1);
     font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 400;
 	line-height: 24px;
     text-decoration: none;
-}
-a.nav:hover, a.nav:active {
-    color: blue;
-    font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-	line-height: 24px;
-    text-decoration: underline;
 }
 ul {
     list-style-type: none;
