--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ a.sub:hover, a.sub:active {
 }
 ul {
     list-style-type: none;
+    margin: 0px;
     position: relative;
     text-align: left;
 }
