--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h3 {
 	font-family: 'Inter', sans-serif;
 	font-size: 18px;
 	font-weight: 400;
-	line-height: 36px;
+	line-height: 200%;
 	position: relative;
 	text-align: left;
 }
@@ -71,7 +71,7 @@ h3 {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 300;
-    line-height: 32px;
+    line-height: 200%;
     position: relative;
     text-align: left;
 }
@@ -80,7 +80,7 @@ h3 {
     font-family: 'Inter', sans-serif;
     font-size: 12px;
     font-weight: 200;
-    line-height: 24px;
+    line-height: 200%;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -89,7 +89,7 @@ a:link, a:visited {
 	font-family: 'Inter', sans-serif;
 	font-size: 16px;
 	font-weight: 300;
-	line-height: 32px;
+	line-height: 200%;
     text-decoration: none;
 }
 a:hover, a:active {
@@ -97,7 +97,7 @@ a:hover, a:active {
 	font-family: 'Inter', sans-serif;
 	font-size: 16px;
 	font-weight: 300;
-	line-height: 32px;
+	line-height: 200%;
     text-decoration: underline;
 }
 a.footer:link, a.footer:visited {
@@ -105,7 +105,7 @@ a.footer:link, a.footer:visited {
 	font-family: 'Inter', sans-serif;
 	font-size: 12px;
 	font-weight: 200;
-	line-height: 24px;
+	line-height: 200%;
     text-decoration: none;
 }
 a.footer:hover, a.footer:active {
@@ -113,7 +113,7 @@ a.footer:hover, a.footer:active {
 	font-family: 'Inter', sans-serif;
 	font-size: 12px;
 	font-weight: 200;
-	line-height: 24px;
+	line-height: 200%;
     text-decoration: underline;
 }
 a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
@@ -121,7 +121,7 @@ a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 400;
-	line-height: 32px;
+	line-height: 200%;
     text-decoration: none;
 }
 a.sub:link, a.sub:visited {
@@ -129,7 +129,7 @@ a.sub:link, a.sub:visited {
 	font-family: 'Inter', sans-serif;
 	font-size: 14px;
 	font-weight: 300;
-	line-height: 28px;
+	line-height: 200%;
     text-decoration: none;
 }
 a.sub:hover, a.sub:active {
@@ -137,7 +137,7 @@ a.sub:hover, a.sub:active {
 	font-family: 'Inter', sans-serif;
 	font-size: 14px;
 	font-weight: 300;
-	line-height: 28px;
+	line-height: 200%;
     text-decoration: underline;
 }
 ul {
@@ -163,14 +163,14 @@ li {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 300;
-    line-height: 32px;
+    line-height: 200%;
 }
 li.sub {
     color: rgba(0, 0, 0, 1);
     font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-weight: 300;
-    line-height: 28px;
+    line-height: 200%;
 }
 li.nav {
     color: rgba(245, 245, 245, 1);
