--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
     font-size: 16px;
     font-weight: 400;
 	line-height: 200%;
+    padding: 8px;
     text-decoration: none;
 }
 a.sub:link, a.sub:visited {
