--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h3 {
     font-weight: 300;
     line-height: 200%;
     position: relative;
-    text-align: left;
+    text-align: justify;
 }
 .footertext {
     color: rgba(0, 0, 0, 1);
