--- a/style.css
+++ b/style.css
@@ -132,7 +132,10 @@ a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
     font-size: 1em;
     font-weight: 400;
 	line-height: 200%;
-    padding: 14px;
+    padding-bottom: 14px;
+    padding-left: 22px;
+    padding-right: 22px;
+    padding-top: 14px;
     text-decoration: none;
 }
 a.sub:link, a.sub:visited {
