--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Containers, wrappers, and general formatting */
 body, html {
     text-size-adjust: none;
 	background-color: rgba(245, 245, 245, 1);
@@ -8,6 +9,54 @@ body, html {
 #page-container {
     position: relative;
     min-height: 100vh;
+}
+#page_content {
+    margin: 0px;
+    padding-bottom: 5.5rem;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+footer {
+    bottom: 0;
+    height: 5.5rem;
+    margin: 0px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+/* Navigation and hero image/text */
+ul.nav {
+    list-style-type: none;
+    background-color: rgba(40, 40, 40, 1);
+    margin: 0px;
+    overflow: hidden;
+    padding: 0px;
+    position: fixed;
+    text-align: left;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+.nav > li {
+    color: rgba(245, 245, 245, 1);
+    display: block;
+    float: left;
+    font-family: 'Inter', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+}
+.nav > li:hover {
+    background-color: rgba(0, 0, 0, 1);
+}
+a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
+    color: rgba(255, 255, 255, 1);
+    font-family: 'Inter', sans-serif;
+    font-size: 1em;
+    font-weight: 400;
+    line-height: 200%;
+    padding: 14px;
+    text-decoration: none;
 }
 #hero_image {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://c-ratcliffe.github.io/img/Header_Brain_Cropped.jpg");
@@ -33,20 +82,6 @@ body, html {
 	top: 85%;
 	transform: translate(0%, -50%);
 }
-#page_content {
-    margin: 0px;
-    padding-bottom: 5.5rem;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-#footer {
-    bottom: 0;
-    height: 5.5rem;
-    margin: 0px;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-}
 h1 {
 	color: rgba(245, 245, 245, 1);
 	font-family: 'Inter', sans-serif;
@@ -59,6 +94,8 @@ h2 {
 	font-size: 1em;
 	font-weight: 300;
 }
+
+/* Page content */
 h3 {
 	color: rgba(0, 0, 0, 1);
 	font-family: 'Inter', sans-serif;
@@ -68,6 +105,30 @@ h3 {
 	position: relative;
 	text-align: left;
 }
+ul {
+    list-style-type: none;
+    margin: 0px;
+    position: relative;
+    text-align: left;
+}
+li {
+    color: rgba(0, 0, 0, 1);
+    font-family: 'Inter', sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 200%;
+}
+li.sub {
+    color: rgba(0, 0, 0, 1);
+    font-family: 'Inter', sans-serif;
+    font-size: 0.875em;
+    font-weight: 300;
+    line-height: 200%;
+}
+img.figure {
+    max-width: 100%;
+    height: auto;
+}
 .bodytext {
     color: rgba(0, 0, 0, 1);
     font-family: 'Inter', sans-serif;
@@ -76,15 +137,6 @@ h3 {
     line-height: 200%;
     position: relative;
     text-align: justify;
-}
-.footertext {
-    color: rgba(0, 0, 0, 1);
-    font-family: 'Inter', sans-serif;
-    font-size: 0.75em;
-    font-weight: 200;
-    line-height: 200%;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 .captiontext {
     color: rgba(0, 0, 0, 1);
@@ -96,20 +148,31 @@ h3 {
     padding-left: 0px;
 }
 a:link, a:visited {
-	color: rgba(0, 0, 0, 1);
-	font-family: 'Inter', sans-serif;
-	font-size: 1em;
-	font-weight: 400;
-	line-height: 200%;
+    color: rgba(0, 0, 0, 1);
+    font-family: 'Inter', sans-serif;
+    font-size: 1em;
+    font-weight: 400;
+    line-height: 200%;
     text-decoration: none;
 }
 a:hover, a:active {
     color: blue;
-	font-family: 'Inter', sans-serif;
-	font-size: 1em;
-	font-weight: 400;
-	line-height: 200%;
+    font-family: 'Inter', sans-serif;
+    font-size: 1em;
+    font-weight: 400;
+    line-height: 200%;
     text-decoration: underline;
+}
+
+/* Footer */
+.footertext {
+    color: rgba(0, 0, 0, 1);
+    font-family: 'Inter', sans-serif;
+    font-size: 0.75em;
+    font-weight: 200;
+    line-height: 200%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 a.footer:link, a.footer:visited {
 	color: rgba(0, 0, 0, 1);
@@ -126,63 +189,4 @@ a.footer:hover, a.footer:active {
 	font-weight: 200;
 	line-height: 200%;
     text-decoration: underline;
-}
-a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
-	color: rgba(255, 255, 255, 1);
-    font-family: 'Inter', sans-serif;
-    font-size: 1em;
-    font-weight: 400;
-	line-height: 200%;
-    padding: 14px;
-    text-decoration: none;
-}
-ul {
-    list-style-type: none;
-    margin: 0px;
-    position: relative;
-    text-align: left;
-}
-ul.nav {
-    list-style-type: none;
-    background-color: rgba(40, 40, 40, 1);
-    margin: 0px;
-    overflow: hidden;
-    padding: 0px;
-    position: fixed;
-    text-align: left;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-}
-li {
-    color: rgba(0, 0, 0, 1);
-    font-family: 'Inter', sans-serif;
-    font-size: 1em;
-    font-weight: 300;
-    line-height: 200%;
-}
-li.sub {
-    color: rgba(0, 0, 0, 1);
-    font-family: 'Inter', sans-serif;
-    font-size: 0.875em;
-    font-weight: 300;
-    line-height: 200%;
-}
-li.nav {
-    color: rgba(245, 245, 245, 1);
-    display: block;
-    float: left;
-    font-family: 'Inter', sans-serif;
-    font-size: 1em;
-    font-weight: 500;
-}
-li.nav:hover {
-    background-color: rgba(0, 0, 0, 1);
-}
-li.nav:active {
-    background-color: rgba(100, 100, 100, 1);
-}
-img.figure {
-    max-width: 100%;
-    height: auto;
 }
