--- a/style.css
+++ b/style.css
@@ -12,17 +12,23 @@ body, html {
 }
 #page_content {
     margin: 0px;
-    padding-bottom: 5.5rem;
+    padding-bottom: 7rem;
     padding-left: 30px;
     padding-right: 30px;
 }
 footer {
     bottom: 0;
+    font-family: 'Inter', sans-serif;
+    font-size: 0.75em;
+    font-weight: 200;
+    line-height: 200%;
     height: 5.5rem;
     margin: 0px;
     position: absolute;
     text-align: center;
-    width: 100%;
+    width: 94%;
+    color: rgba(0, 0, 0, 1);
+    padding: 3%;
 }
 
 /* Navigation and hero image/text */
@@ -118,12 +124,8 @@ li {
     font-weight: 300;
     line-height: 200%;
 }
-li.sub {
-    color: rgba(0, 0, 0, 1);
-    font-family: 'Inter', sans-serif;
+.sub > li {
     font-size: 0.875em;
-    font-weight: 300;
-    line-height: 200%;
 }
 img.figure {
     max-width: 100%;
@@ -165,28 +167,13 @@ a:hover, a:active {
 }
 
 /* Footer */
-.footertext {
-    color: rgba(0, 0, 0, 1);
-    font-family: 'Inter', sans-serif;
-    font-size: 0.75em;
-    font-weight: 200;
-    line-height: 200%;
-    padding-left: 10px;
-    padding-right: 10px;
-}
 a.footer:link, a.footer:visited {
 	color: rgba(0, 0, 0, 1);
-	font-family: 'Inter', sans-serif;
-	font-size: 1em;
-	font-weight: 200;
-	line-height: 200%;
+    font-weight: 200;
     text-decoration: none;
 }
 a.footer:hover, a.footer:active {
     color: blue;
-	font-family: 'Inter', sans-serif;
-	font-size: 1em;
-	font-weight: 200;
-	line-height: 200%;
+    font-weight: 200;
     text-decoration: underline;
 }
