--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ footer {
     font-weight: 200;
     line-height: 200%;
     height: 7rem;
-    margin: 0px;
-    padding: 3%;
+    margin: 10px;
+    padding: 0;
     position: absolute;
     text-align: center;
     width: 94%;
