--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@ a {
 }
 .col {
     flex: 1;
-    width: auto;
+    height: auto;
     max-height: 20rem;
     margin: 10px;
-    max-width: 50%;
+    max-width: 20rem;
 }
 
 /* Navigation and hero image/text */
