--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ footer {
     max-height: 5.5rem;
     padding-left: 1%;
     padding-right: 1%;
-    position: absolute;
+    position: relative;
     text-align: center;
-    width: 98%;
+    max-width: 98%;
 }
 p {
     color: rgba(0, 0, 0, 1);
